Add more styling ish

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href='scss/resume.css' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,700,300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class='top-header'>
@@ -40,21 +41,25 @@
           Bachelor of Science in Computer Science and Information Science
         </div>
         <div class='offsetList'>
-          Honors
-          <div class='item'>
-            GPA 3.6/4.0
+          <div class='name'>
+            Honors
           </div>
-          <div class='item'>
-            Deans List 2006-2010
-          </div>
-          <div class='item'>
-            Named One of Top 100 Influential Seniors
-          </div>
-          <div class='item'>
-            Received one of sixteen 2010 Outstanding Co-op Awards
-          </div>
-          <div class='item'>
-            First Place in 2010 National Collegiate Cyber Defence Competition
+          <div class='items'>
+            <div class='item'>
+              GPA 3.6/4.0
+            </div>
+            <div class='item'>
+              Deans List 2006-2010
+            </div>
+            <div class='item'>
+              Named One of Top 100 Influential Seniors
+            </div>
+            <div class='item'>
+              Received one of sixteen 2010 Outstanding Co-op Awards
+            </div>
+            <div class='item'>
+              First Place in 2010 National Collegiate Cyber Defence Competition
+            </div>
           </div>
         </div>
       </div>
@@ -83,7 +88,10 @@
             Prototyped, Designed and was Lead Engineer on Rockmelt's web application.
           </div>
           <div class='tidbit'>
-            Evaluated libraries and reverse engineered performance limitations.
+            Evaluated javascript libraries and reverse engineered performance limitations.
+          </div>
+          <div class='tidbit'>
+            Worked on integrating Facebook features into native UI of a browser.
           </div>
         </div>
       </div>
@@ -267,6 +275,34 @@
           </div>
           <div class='entry'>
             Ruby
+          </div>
+        </div>
+      </div>
+      <div class='skill-section'>
+        <div class='name'>
+          Tools
+        </div>
+        <div class='entries'>
+          <div class='entry'>
+            Vim
+          </div>
+          <div class='entry'>
+            git
+          </div>
+          <div class='entry'>
+            XCode
+          </div>
+          <div class='entry'>
+            Visual Studio
+          </div>
+          <div class='entry'>
+            Photoshop
+          </div>
+          <div class='entry'>
+            Sublime Text
+          </div>
+          <div class='entry'>
+            TextMate
           </div>
         </div>
       </div>
