Rephrase some things

--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
         </div>
         <div class='tidbits'>
           <div class='tidbit'>
-            Prototyped, Designed and was Lead Engineer on Rockmelt's web application.
+            Prototyped, designed on Rockmelt's web application.
           </div>
           <div class='tidbit'>
-            Evaluated javascript libraries and reverse engineered performance limitations.
+            Lead engineer of the Rockmelt web application team as we grew from 1 to 5.
+          </div>
+          <div class='tidbit'>
+            Evaluated Javascript libraries and reverse engineered performance limitations.
           </div>
           <div class='tidbit'>
             Worked on integrating Facebook features into native UI of a browser.
@@ -112,16 +115,16 @@
         </div>
         <div class='tidbits'>
           <div class='tidbit'>
-            Tasked with optimizing and refactoring the existing C++ trading platform code.
+            Optimized and refactored the existing C++ trading platform code.
           </div>
           <div class='tidbit'>
-            Suppored the trading staff in usage of the platform.
+            Supported the trading staff in usage of the platform.
           </div>
           <div class='tidbit'>
-            Reverse Engineered remote service implementations to optimize timings.
+            Reverse engineered remote service implementations to optimize timings.
           </div>
           <div class='tidbit'>
-            Moved trading platform into managed source control (Git)
+            Moved trading platform into managed source control (Git).
           </div>
         </div>
       </div>
@@ -142,10 +145,10 @@
         </div>
         <div class='tidbits'>
           <div class='tidbit'>
-            Developed the User Interface for a Client/Server platform tool for remotely managing environment variables.
+            Developed the user interface for a client/server platform tool for remotely managing environment variables.
           </div>
           <div class='tidbit'>
-            Designed, Developed and Deployed a ASP.NET and WCF powered web application for managing subscriptions.
+            Designed, developed and Deployed an ASP.NET and WCF powered web application for managing subscriptions.
           </div>
           <div class='tidbit'>
             Bridged three separate teams and their services to create the above unified subscription manager.
@@ -288,6 +291,34 @@
           </div>
           <div class='entry'>
             git
+          </div>
+          <div class='entry'>
+            XCode
+          </div>
+          <div class='entry'>
+            Visual Studio
+          </div>
+          <div class='entry'>
+            Photoshop
+          </div>
+          <div class='entry'>
+            Sublime Text
+          </div>
+          <div class='entry'>
+            TextMate
+          </div>
+        </div>
+      </div>
+      <div class='skill-section'>
+        <div class='name'>
+          Systems
+        </div>
+        <div class='entries'>
+          <div class='entry'>
+            Mac OS
+          </div>
+          <div class='entry'>
+            Linux (Debian)
           </div>
           <div class='entry'>
             XCode
