Fix listings of systems and tools

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class='tidbits'>
           <div class='tidbit'>
-            Prototyped, designed on Rockmelt's web application.
+            Prototyped, designed and developed the core of Rockmelt's web application.
           </div>
           <div class='tidbit'>
             Lead engineer of the Rockmelt web application team as we grew from 1 to 5.
@@ -307,6 +307,18 @@
           <div class='entry'>
             TextMate
           </div>
+          <div class='entry'>
+            EC2
+          </div>
+          <div class='entry'>
+            Linode
+          </div>
+          <div class='entry'>
+            Google App Engine
+          </div>
+          <div class='entry'>
+            Rake Pipeline
+          </div>
         </div>
       </div>
       <div class='skill-section'>
@@ -321,19 +333,10 @@
             Linux (Debian)
           </div>
           <div class='entry'>
-            XCode
+            Windows
           </div>
           <div class='entry'>
-            Visual Studio
-          </div>
-          <div class='entry'>
-            Photoshop
-          </div>
-          <div class='entry'>
-            Sublime Text
-          </div>
-          <div class='entry'>
-            TextMate
+            Red Hat
           </div>
         </div>
       </div>
