Move education to after work experience. Applied some fixes to wording.

--- a/index.html
+++ b/index.html
@@ -23,49 +23,6 @@
     </div>
     <div class='subsection'>
       <div class='title'>
-        Education
-      </div>
-      <div class='entry'>
-        <div class='header'>
-          <div class='name'>
-            Northeastern University
-          </div>
-          <div class='location'>
-            Boston, MA
-          </div>
-          <div class='dates'>
-            2006-2010
-          </div>
-        </div>
-        <div class='position'>
-          Bachelor of Science in Computer Science and Information Science
-        </div>
-        <div class='offsetList'>
-          <div class='name'>
-            Honors
-          </div>
-          <div class='items'>
-            <div class='item'>
-              GPA 3.6/4.0
-            </div>
-            <div class='item'>
-              Deans List 2006-2010
-            </div>
-            <div class='item'>
-              Named One of Top 100 Influential Seniors
-            </div>
-            <div class='item'>
-              Received one of sixteen 2010 Outstanding Co-op Awards
-            </div>
-            <div class='item'>
-              First Place in 2010 National Collegiate Cyber Defence Competition
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class='subsection'>
-      <div class='title'>
         Work Experience
       </div>
       <div class='entry'>
@@ -121,7 +78,7 @@
             Supported the trading staff in usage of the platform.
           </div>
           <div class='tidbit'>
-            Reverse engineered remote service implementations to optimize timings.
+            Reverse engineered remote service implementations for optimal entry of orders during market open.
           </div>
           <div class='tidbit'>
             Moved trading platform into managed source control (Git).
@@ -145,7 +102,7 @@
         </div>
         <div class='tidbits'>
           <div class='tidbit'>
-            Developed the user interface for a client/server platform tool for remotely managing environment variables.
+            Developed the user interface for a client/server platform tool to remotely manage environment variables.
           </div>
           <div class='tidbit'>
             Designed, developed and Deployed an ASP.NET and WCF powered web application for managing subscriptions.
@@ -221,6 +178,49 @@
           </div>
           <div class='tidbit'>
             Provided support for servers via the Microsoft Operations Manager Console and WSUS.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class='subsection'>
+      <div class='title'>
+        Education
+      </div>
+      <div class='entry'>
+        <div class='header'>
+          <div class='name'>
+            Northeastern University
+          </div>
+          <div class='location'>
+            Boston, MA
+          </div>
+          <div class='dates'>
+            2006-2010
+          </div>
+        </div>
+        <div class='position'>
+          Bachelor of Science in Computer Science and Information Science
+        </div>
+        <div class='offsetList'>
+          <div class='name'>
+            Honors
+          </div>
+          <div class='items'>
+            <div class='item'>
+              GPA 3.6/4.0
+            </div>
+            <div class='item'>
+              Deans List 2006-2010
+            </div>
+            <div class='item'>
+              Named One of Top 100 Influential Seniors
+            </div>
+            <div class='item'>
+              Received one of sixteen 2010 Outstanding Co-op Awards
+            </div>
+            <div class='item'>
+              First Place in 2010 National Collegiate Cyber Defence Competition
+            </div>
           </div>
         </div>
       </div>
@@ -319,6 +319,9 @@
           <div class='entry'>
             Rake Pipeline
           </div>
+          <div class='entry'>
+            Node
+          </div>
         </div>
       </div>
       <div class='skill-section'>
@@ -330,13 +333,13 @@
             Mac OS
           </div>
           <div class='entry'>
-            Linux (Debian)
-          </div>
-          <div class='entry'>
-            Windows
+            Debain Linux
           </div>
           <div class='entry'>
             Red Hat
+          </div>
+          <div class='entry'>
+            Windows
           </div>
         </div>
       </div>
