--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             Evaluated Javascript libraries and reverse engineered performance limitations.
           </div>
           <div class='tidbit'>
-            Worked on integrating Facebook features into native UI of a browser.
+            Worked on integrating Facebook features into native UI of our Chromium derivitave browser.
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
             Bridged three separate teams and their services to create the above unified subscription manager.
           </div>
           <div class='tidbit'>
-            Contributed to software services on a high volume concurrency messaging platform developed in MSIT.
+            Contributed to software services on a high volume concurrent messaging platform developed in MSIT.
           </div>
           <div class='tidbit'>
             Maintained our team's 50+ server development and test laboratory.
@@ -174,7 +174,7 @@
             Supported the business as a service desk technician.
           </div>
           <div class='tidbit'>
-            Designed the roll out of a MS Team Foundation Server for our application development teams.
+            Designed the rollout of a MS Team Foundation Server for our application development teams.
           </div>
           <div class='tidbit'>
             Provided support for servers via the Microsoft Operations Manager Console and WSUS.
@@ -333,7 +333,7 @@
             Mac OS
           </div>
           <div class='entry'>
-            Debain Linux
+            Debian Linux
           </div>
           <div class='entry'>
             Red Hat
