Wording changes, add dividers to skills

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             Optimized and refactored the existing C++ trading platform code.
           </div>
           <div class='tidbit'>
-            Supported the trading staff in usage of the platform.
+            Worked with the trading staff in developing strategies on the trading platform.
           </div>
           <div class='tidbit'>
             Reverse engineered remote service implementations for optimal entry of orders during market open.
