--- a/template.html
+++ b/template.html
@@ -32,9 +32,14 @@
 
       .job {
         margin: 1em 0;
+        page-break-inside: avoid;
+      }
+
+      .cols {
         display: flex;
         flex-wrap: nowrap;
         justify-content: space-between;
+        align-items: baseline;
       }
 
       .job .employment {
@@ -54,9 +59,10 @@
       }
 
       .job .right {
-        text-align: right;
-        width: 170px;
         flex-grow: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
       }
 
       .job .location {
@@ -72,9 +78,10 @@
       }
 
       .keywords {
+        text-align: right;
         font-size: 10px;
         font-family: monospace;
-        margin-top: 1em;
+        max-width: 120px;
       }
 
       .keyword-label {
@@ -83,6 +90,8 @@
       }
 
       .gpa {
+        margin-top: 1em;
+        font-size: 12px;
         font-family: monospace;
       }
 
@@ -104,32 +113,40 @@
     <section class="professional">
       {{ range $i, $element := .Jobs }}
         <section class="job">
-          <div class="left">
-            <div>
-              <span class="business">{{$element.Business}}</span>
-              <span class="location">{{$element.Location}}</span>
+          <div class="cols">
+            <div class="left">
+              <div>
+                <span class="business">{{$element.Business}}</span>
+                <span class="location">{{$element.Location}}</span>
+              </div>
             </div>
-            <div><span class="title">{{$element.Title}}<span></div>
-            <div class="projects">
-            {{ range $i, $proj := $element.Projects }}
-              <div class="project">{{$proj}}</div>
-            {{ end }}
+            <div class="right">
+              <div class="employment">{{$element.Tenure}}</div>
             </div>
           </div>
-          <div class="right">
-            <div class="employment">{{$element.Tenure}}</div>
-            <div class="keywords">
-              <div class="keyword-label">Langs</div>
-              <div>
-                {{ range $i, $lang := $element.Languages }}
-                  <span class="language">{{$lang}}</span>
-                {{ end }}
+          <div class="cols">
+            <div class="left">
+              <div><span class="title">{{$element.Title}}<span></div>
+              <div class="projects">
+              {{ range $i, $proj := $element.Projects }}
+                <div class="project">{{$proj}}</div>
+              {{ end }}
               </div>
-              <div class="keyword-label">Techs</div>
-              <div>
-                {{ range $i, $tech := $element.Technologies }}
-                  <span class="technology">{{$tech}}</span>
-                {{ end }}
+            </div>
+            <div class="right">
+              <div class="keywords">
+                <div class="keyword-label">Langs</div>
+                <div>
+                  {{ range $i, $lang := $element.Languages }}
+                    <span class="language">{{$lang}}</span>
+                  {{ end }}
+                </div>
+                <div class="keyword-label">Techs</div>
+                <div>
+                  {{ range $i, $tech := $element.Technologies }}
+                    <span class="technology">{{$tech}}</span>
+                  {{ end }}
+                </div>
               </div>
             </div>
           </div>
@@ -139,21 +156,23 @@
     <section class="education">
       {{ range $i, $degree := .Degrees}}
         <section class="job">
-          <div class="left">
-            <div>
-              <span class="business">{{$degree.Institution}}</span>
-              <span class="location">{{$degree.Location}}</span>
+          <div class="cols">
+            <div class="left">
+              <div>
+                <span class="business">{{$degree.Institution}}</span>
+                <span class="location">{{$degree.Location}}</span>
+              </div>
+              <div><span class="title">{{$degree.Title}}<span></div>
+              <div class="projects">
+              {{ range $i, $accolade := $degree.Accolades }}
+                <div class="project">{{$accolade}}</div>
+              {{ end }}
+              </div>
             </div>
-            <div><span class="title">{{$degree.Title}}<span></div>
-            <div class="projects">
-            {{ range $i, $accolade := $degree.Accolades }}
-              <div class="project">{{$accolade}}</div>
-            {{ end }}
+            <div class="right">
+              <div class="employment">{{$degree.Tenure}}</div>
+              <div class="gpa"><span class="label">GPA:</span> <span class="earned">{{$degree.GPA.Earned}}</span> / <span class="max">{{$degree.GPA.Max}}</span></div>
             </div>
-          </div>
-          <div class="right">
-            <div class="employment">{{$degree.Tenure}}</div>
-            <div class="gpa"><span class="label">GPA:</span> <span class="earned">{{$degree.GPA.Earned}}</span> / <span class="max">{{$degree.GPA.Max}}</span></div>
           </div>
         </section>
       {{end}}
